<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quizoid</string>
    <string name="emaill">Email</string>
    <string name="Login">Login</string>
    <string name="Text">Create new account</string>
    <string name="pass">Password</string>
    <string name="Sign">Sign In</string>
    <string name="Text2">Already have account?</string>

    <string name="reg">Mobile No.</string>
    <string name="play">Start Quiz</string>
    <string name="delete">Delete Account</string>
    <string name="exit">Sign Out</string>
    <string name="google">Register with Google</string>
    <string name="facebook_app_id">859229217822538</string>
    <string name="fb_login_protocol_scheme">fb859229217822538</string>
    <string name="fb">Register with Facebook</string>
    <string name="Text3">Or \nSign In with </string>

    <string name="textview">TextView</string>
    <string name="button">Button</string>

    <string name="num">TextView</string>
    <string name="SCORE">SCORE</string>
    <string name="marks">5/10</string>
    <string name="DONE">DONE</string>
    <string name="select_type">Select Type</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="get_started">GET STARTED</string>

    <string name="title">TODO</string>


    <string name="register_s">REGISTER</string>
    <string name="teacher_c">TEACHER</string>
    <string name="student_s">TODO</string>
    <string name="asdfghj">TODO</string>
    <string name="student_c">STUDENT</string>
    <string name="zxcvbn">TODO</string>
    <string name="qwert">TODO</string>
    <string name="asdfghjkl">TODO</string>
    <string name="login">LOGIN</string>
    <string name="enter_the_code">Enter the Code</string>
    <string name="cancel">CANCEL</string>
    <string name="join">JOIN</string>
    <string name="access_code">ACCESS CODE:</string>
    <string name="join_course">JOIN COURSE</string>

    <string name="course_name">COURSE NAME</string>
    <string name="school_name">SCHOOL NAME</string>
    <string name="courses">COURSES</string>
    <string name="join_a_course">JOIN A COURSE</string>
    <string name="username">username</string>
    <string name="registration_number">Registration Number</string>
    <string name="register">REGISTER</string>

    <string name="total_questions">TOTAL QUESTIONS</string>
    <string name="quiz_details">QUIZ DETAILS</string>
    <string name="time_limit">TIME LIMIT</string>
    <string name="total_marks">TOTAL MARKS</string>
    <string name="_5">10</string>
    <string name="_5_mins">10mins</string>
    <string name="todo">todo</string>
    <string name="start_attempt">START ATTEMPT</string>
    <string name="test_name">TEST NAME</string>
    <string name="question">QUES NO:</string>
    <string name="_1_5">num</string>
    <string name="time_left">TIME LEFT:</string>
    <string name="_05_00">00</string>
    <string name="what_does_srs_stand_for">QUESTION</string>
    <string name="software_requirements_specification">OPTION A</string>
    <string name="software_research_specification">OPTION C</string>
    <string name="system_requirements_specification">OPTION B</string>
    <string name="system_research_specification">OPTION 4</string>
    <string name="next">SKIP</string>
    <string name="back">BACK</string>
    <string name="review_attempt">SUBMIT</string>
    <string name="review_your_answers_before_final_submission">ARE YOU SURE YOU WANT TO SUBMIT</string>
    <string name="submit">SUBMIT</string>
    <string name="_3_5">marks</string>
    <string name="incorrect">IINCORRECT</string>
    <string name="correct">CORRECT</string>
    <string name="not_attempted">NOT ATTEMPTED</string>
    <string name="attempted">ATTEMPTED</string>
    <string name="_4">attem</string>
    <string name="_1">not_attemp</string>
    <string name="_3">correc</string>
    <string name="_2">incorr</string>
    <string name="results">RESULTS</string>
    <string name="course">COURSE</string>

</resources>
